test/functions/ferguson/ref-pair/const-error.good
const-error.chpl:31: In function 'f':
const-error.chpl:32: error: const actual is passed to 'ref' formal 'x' of setElement()
const-error.chpl:33: error: const actual is passed to 'ref' formal 'x' of callSetElement()
const-error.chpl:34: error: const actual is passed to 'ref' formal 'x' of callSetElementWithGetter()
  const-error.chpl:46: called as f(array: [domain(1,int(64),one)] int(64))
const-error.chpl:38: In function 'g':
const-error.chpl:41: error: const actual is passed to 'ref' formal 'x' of setElement()
const-error.chpl:42: error: const actual is passed to 'ref' formal 'x' of callSetElement()
const-error.chpl:43: error: const actual is passed to 'ref' formal 'x' of callSetElementWithGetter()
const-error.chpl:48: error: const actual is passed to 'ref' formal 'x' of setElement()
const-error.chpl:49: error: const actual is passed to 'ref' formal 'x' of callSetElement()
const-error.chpl:50: error: const actual is passed to 'ref' formal 'x' of callSetElementWithGetter()
